--- a/assignments2/week8-course-selling/package.json
+++ b/assignments2/week8-course-selling/package.json
@@ -25,7 +25,9 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.14.1",
     "nodemon": "^3.1.9",
     "typescript": "^5.8.3"
