--- a/assignments2/week8-course-selling/package.json
+++ b/assignments2/week8-course-selling/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node ./dist/index.js"
     "dev": "nodemon ./dist/index.js",
     "watch": "tsc -watch"
   },
